# aoc2022

./: Makefile  README.md  pyproject.toml
solutions/day1/: solution.py
solutions/day10/: solution.py
solutions/day11/: solution.py
solutions/day12/: solution.py
solutions/day13/: solution.py
solutions/day15/: solution.py
solutions/day2/: solution.py
solutions/day3/: solution.py
solutions/day4/: solution.py
solutions/day5/: solution.py
solutions/day6/: solution.py
solutions/day7/: solution.py
solutions/day8/: solution.py
solutions/day9/: solution.py
solutions/utils/: groups.py  input.py
tests/: test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day15.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py  test_utils.py
